// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[[ IssuePriorityFilter ]] renders IssuePriorityFilter with empty availableAnalyzers 1`] = `
"<zbadge-stub isdot=\\"true\\" size=\\"md\\" type=\\"success\\" textcolor=\\"vanilla-100\\"><button href=\\"#\\" type=\\"button\\" class=\\"inline-flex items-center font-medium transition-colors duration-300 ease-in-out rounded-sm z-btn focus:outline-none whitespace-nowrap outline-none focus:outline-none text-vanilla-100 text-ink-400 justify-center h-8 px-4 py-1 text-xs space-x-1 leading-loose bg-juniper hover:bg-juniper-600 bg-ink-300 hover:bg-ink-200\\">
    <!---->
    <div class=\\"flex items-center gap-x-2\\"><span class=\\"items-center gap-x-1 xl:flex\\"><zicon-stub icon=\\"docker\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub> <span class=\\"hidden md:block\\">
            docker
          </span></span>
      <zicon-stub icon=\\"x\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub>
    </div>
  </button></zbadge-stub>"
`;

exports[`[[ IssuePriorityFilter ]] renders IssuePriorityFilter with the store: {"selectedAnalyzer":"docker","level":"OWNER"} 1`] = `
"<zbadge-stub isdot=\\"true\\" size=\\"md\\" type=\\"success\\" textcolor=\\"vanilla-100\\"><button href=\\"#\\" type=\\"button\\" class=\\"inline-flex items-center font-medium transition-colors duration-300 ease-in-out rounded-sm z-btn focus:outline-none whitespace-nowrap outline-none focus:outline-none text-vanilla-100 text-ink-400 justify-center h-8 px-4 py-1 text-xs space-x-1 leading-loose bg-juniper hover:bg-juniper-600 bg-ink-300 hover:bg-ink-200\\">
    <!---->
    <div class=\\"flex items-center gap-x-2\\"><span class=\\"items-center gap-x-1 xl:flex\\"><analyzerlogo-stub analyzerlogo=\\"\\" name=\\"Dockerfile\\" shortcode=\\"docker\\" size=\\"base\\" class=\\"w-5 flex-shrink-0\\"></analyzerlogo-stub> <span class=\\"hidden md:block\\">
            Dockerfile
          </span></span>
      <zicon-stub icon=\\"x\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub>
    </div>
  </button></zbadge-stub>"
`;

exports[`[[ IssuePriorityFilter ]] renders IssuePriorityFilter with the store: {"selectedAnalyzer":"docker","level":"REPOSITORY"} 1`] = `
"<zbadge-stub isdot=\\"true\\" size=\\"md\\" type=\\"success\\" textcolor=\\"vanilla-100\\"><button href=\\"#\\" type=\\"button\\" class=\\"inline-flex items-center font-medium transition-colors duration-300 ease-in-out rounded-sm z-btn focus:outline-none whitespace-nowrap outline-none focus:outline-none text-vanilla-100 text-ink-400 justify-center h-8 px-4 py-1 text-xs space-x-1 leading-loose bg-juniper hover:bg-juniper-600 bg-ink-300 hover:bg-ink-200\\">
    <!---->
    <div class=\\"flex items-center gap-x-2\\"><span class=\\"items-center gap-x-1 xl:flex\\"><analyzerlogo-stub analyzerlogo=\\"\\" name=\\"Dockerfile\\" shortcode=\\"docker\\" size=\\"base\\" class=\\"w-5 flex-shrink-0\\"></analyzerlogo-stub> <span class=\\"hidden md:block\\">
            Dockerfile
          </span></span>
      <zicon-stub icon=\\"x\\" size=\\"small\\" position=\\"\\" color=\\"vanilla-400\\"></zicon-stub>
    </div>
  </button></zbadge-stub>"
`;
